src/objects/SBQQ__PriceCondition__c.object
<CustomObject>
    <fields>
        <fullName>cpqma_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>CPQ External Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FilterVariableExternalId__c</fullName>
        <formula>SBQQ__FilterVariable__r.cpqma_ExternalId__c</formula>
        <label>FilterVariableExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuleExternalId__c</fullName>
        <formula>SBQQ__Rule__r.cpqma_ExternalId__c</formula>
        <label>RuleExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestedVariableExternalId__c</fullName>
        <formula>SBQQ__TestedVariable__r.cpqma_ExternalId__c</formula>
        <label>TestedVariableExternalId</label>
        <type>Text</type>
    </fields>
</CustomObject>